--- a/TCPServer/MainWindow.ui
+++ b/TCPServer/MainWindow.ui
@@ -23,11 +23,14 @@
       <x>10</x>
       <y>80</y>
       <width>781</width>
-      <height>461</height>
+      <height>431</height>
      </rect>
     </property>
     <property name="acceptDrops">
      <bool>false</bool>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QPushButton" name="m_startTCPServer">
@@ -179,6 +182,19 @@
      <string>Unbind</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="m_clearConsole">
+    <property name="geometry">
+     <rect>
+      <x>9</x>
+      <y>516</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Clear</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -189,16 +205,20 @@
      <height>23</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionE_xit"/>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionE_xit">
+   <property name="text">
+    <string>E&amp;xit</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
